--- a/xiaomi/pc/index.html
+++ b/xiaomi/pc/index.html
@@ -38,11 +38,17 @@
         </div>
     </header>
     <nav class="flex-center">
-        <div class="wrapper"> 
-            <a href=""><img class="logo" src="./images/logo.png" alt=""/></a>
+        <div class="wrapper">
+            <a href=""><img class="logo" src="./images/logo.png" alt="" /></a>
             <ul class="nav-list">
                 <li><a href="">首页</a></li>
-                <li><a href="">理财</a></li>
+                <li class="sub-toggle">
+                    <a href="">理财</a>
+                    <ul class="sub-menu">
+                        <li><a href="">定期理财</a></li>
+                        <li><a href="">基金投资</a></li>
+                    </ul>
+                </li>
                 <li><a href="">贷款</a></li>
                 <li><a href="">资产</a></li>
                 <li><a href="">社区</a></li>
@@ -55,12 +61,16 @@
         <h2>小米用科技畅想金融</h2>
         <button>下载小米金融APP</button>
     </div> -->
-    
+
     <div id="banner">
         <h2>小米用科技畅想金融</h2>
         <button>下载小米金融APP</button>
         <h3>234ew2qw3erfdserd</h3>
         <h4>哈哈哈哈😄</h4>
+        <div class="box">
+            <div class="triangle"></div>
+            <div class="aa">111</div>
+        </div>
     </div>
     <main></main>
     <footer></footer>
