--- a/xiaomi/pc/index.html
+++ b/xiaomi/pc/index.html
@@ -72,8 +72,69 @@
             <div class="aa">111</div>
         </div>
     </div>
-    <main></main>
-    <footer></footer>
+    <main class="flex-center">
+        <ul class="section wrapper">
+            <li>
+                <a href="" class="bg">
+                    <h5>理财</h5>
+                    <h6>新用户加息 12%</h6>
+                </a>
+                <ul class="content">
+                    <li><a href="" class="main">小米官网</a><span>|</span><a href="" class="desc">小米 111111</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 222222</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 333333</a></li>
+                </ul>
+                <a href="" class="more">了解更多 &gt;</a>
+            </li>
+            <li>
+                <a href="" class="bg">
+                    <h5>理财</h5>
+                    <h6>新用户加息 12%</h6>
+                </a>
+                <ul class="content">
+                    <li><a href="" class="main">小米官网</a><span>|</span><a href="" class="desc">小米 111111</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 222222</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 333333</a></li>
+                </ul>
+                <a href="" class="more">了解更多 &gt;</a>
+            </li>
+            <li>
+                <a href="" class="bg">
+                    <h5>理财</h5>
+                    <h6>新用户加息 12%</h6>
+                </a>
+                <ul class="content">
+                    <li><a href="" class="main">小米官网</a><span>|</span><a href="" class="desc">小米 111111</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 222222</a></li>
+                    <li><a href="" class="main">小米官网</a><a href="" class="desc">小米 333333</a></li>
+                </ul>
+                <a href="" class="more">了解更多 &gt;</a>
+            </li>
+
+        </ul>
+    </main>
+    <footer class="flex-center">
+        <div class="wrapper">
+            <div class="left">
+                <img src="./images/footer-logo.png" alt="">
+                <ul>
+                    <li><a href="">帮助中心</a></li>
+                    <li><a href="">关于我们</a></li>
+                    <li><a href="">新浪微博</a></li>
+                </ul>
+                <ul>
+                    <li><a href="">Copyright © mi.com 京ICP备10046444号-7</a></li>
+                    <li><a href="">京ICP证110507号</a></li>
+                    <li><a href="">客服电话</a></li>
+                </ul>
+            </div>
+            <div class="right">
+                <div class="title">客服电话</div>
+                <div class="tel">196111-990393</div>
+                <div class="time">一天 25 个小时营业</div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
