小米商城结束

--- a/xiaomi/移动端/index.html
+++ b/xiaomi/移动端/index.html
@@ -21,11 +21,201 @@
       <input type="text" placeholder="搜索商品名称">
       <a class="user"><img src="./imgs/user.png" alt=""></a>
     </div>
-    <nav></nav>
+    <nav>
+      <ul class="flex flex-between wrapper">
+        <li class="active flex"><a href="">推荐</a></li>
+        <li class="flex"><a href="">手机</a></li>
+        <li class="flex"><a href="">智能</a></li>
+        <li class="flex"><a href="">电视</a></li>
+        <li class="flex"><a href="">家电</a></li>
+        <li class="flex"><a href="">笔记本</a></li>
+        <li class="flex"><a href=""><img class="arrow-down" src="./imgs/down.png" alt=""></a></li>
+      </ul>
+    </nav>
   </header>
-  <div id="banner"></div>
-  <main></main>
-  <footer></footer>
+  <div id="banner">
+    <div class="carousel">
+      <img src="./imgs/banner.jpg" alt="">
+    </div>
+    <ul class="flex">
+      <li><a href=""><img src="./imgs/a1.png" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a2.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a3.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a4.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a5.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a6.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a7.png" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a8.png" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a9.webp" alt=""></a></li>
+      <li><a href=""><img src="./imgs/a10.png" alt=""></a></li>
+    </ul>
+  </div>
+  <main>
+    <div class="hot divider clearfix">
+      <img class="left" src="imgs/n1.webp" alt="">
+      <img class="right" src="imgs/n2.webp" alt="">
+      <img src="imgs/n3.webp" alt="">
+    </div>
+    <!-- 三个广告图片结束 -->
+
+    <div class="banner divider"><img src="./imgs/n4.webp" alt=""></div>
+    <!-- 一个大 banner 结束 -->
+
+    <div class="products divider">
+      <ul class="flex flex-evenly">
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m1.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p class="price"><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m2.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m3.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m4.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m1.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m2.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m3.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <div>
+              <img src="imgs/m4.jpg" alt="">
+              <h5>小米 1ProPlus</h5>
+              <p> 这个手机特别棒</p>
+              <p><span>￥</span>320 <span>起</span></p>
+              <button>立即购买</button>
+            </div>
+          </a>
+        </li>
+      </ul>
+      <div class="more"><a href="">更多小米 xx 产品 &gt;</a></div>
+    </div>
+    <!-- 产品列表结束 -->
+
+    <div class="banner divider">
+      <img src="./imgs/n4.webp" alt="">
+      <div class="more"><a href="">更多小米 xx 产品 &gt;</a></div>
+    </div>
+    <!-- 一个大 banner 结束 -->
+
+    <div class="goods">
+      <ul>
+        <li class="flex">
+          <a href="">
+            <img src="imgs/m1.jpg" alt="">
+            <div class="info">
+              <h5>标题标题</h5>
+              <p>买啊买啊</p>
+              <h6> 666</h6>
+            </div>
+          </a>
+        </li>
+        <li class="flex">
+          <a href="">
+            <img src="imgs/m2.jpg" alt="">
+            <div class="info">
+              <h5>标题标题</h5>
+              <p>买啊买啊</p>
+              <h6> 666</h6>
+            </div>
+          </a>
+        </li>
+        <li class="flex">
+          <a href="">
+            <img src="imgs/m3.jpg" alt="">
+            <div class="info">
+              <h5>标题标题</h5>
+              <p>买啊买啊</p>
+              <h6> 666</h6>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- 错落产品结束 -->
+  </main>
+  <footer>
+    <ul class="flex">
+      <li class="flex flex-center">
+        <a class="flex flex-center" href="">
+          <img src="imgs/tabbar1.png" alt="">
+          <span>首页</span>
+        </a>
+      </li>
+      <li class="flex flex-center"><a class="flex flex-center" href=""><img src="imgs/tabbar2.png"
+            alt=""><span>嘿嘿</span></a></li>
+      <li class="flex flex-center"><a class="flex flex-center" href=""><img src="imgs/tabbar3.png"
+            alt=""><span>哈哈</span></a></li>
+      <li class="flex flex-center"><a class="flex flex-center" href=""><img src="imgs/tabbar4.png"
+            alt=""><span>放学啦</span></a></li>
+      <li class="flex flex-center"><a class="flex flex-center" href=""><img src="imgs/user.png"
+            alt=""><span>做作业</span></a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
