--- a/4_DOM/1_获取元素.html
+++ b/4_DOM/1_获取元素.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        #ul1 .aa{
+
+        }
+    </style>
 </head>
 
 <body>
@@ -27,6 +32,16 @@
         <li>li 2</li>
     </ul>
 
+    <p>
+        用户名：<input type="text" name="username" id="aa">
+    </p>
+    <p>
+        密码：<input type="password" name="userpass">
+    </p>
+    <p>
+        性别：<input type="radio" name="gender">男<input type="radio" name="gender">女
+    </p>
+
     <script>
         // 获取元素的方法
         // 1. getElementById
@@ -40,8 +55,9 @@
 
         // 2. getElementsByTagName
         // getElementsByTagName返回的是类数组对象
-        // var oUl1 = document.getElementById('ul1');
-        // var aLi = oUl1.getElementsByTagName('li');
+        var oUl1 = document.getElementById('ul1');
+        var aLi = oUl1.getElementsByTagName('li');
+        console.log(aLi);
         // for(var i=0; i<aLi.length; i++){
         //     aLi[i].style.background = 'red';
         // }
@@ -83,6 +99,22 @@
                 return result;
             }
         }
+        // 4. getElementsByName
+        // var aInput = document.getElementsByName('username');
+        // aInput[0].onclick = function(){
+        //     console.log('haha');
+        // }
+
+        var aGender = document.getElementsByName('gender');
+        console.log(aGender);
+
+        // 5. querySelector和querySelectorAll
+        // var oBtn = document.querySelector('#btn');
+        // console.log(oBtn);
+
+        var aLi = document.querySelectorAll('#ul1 .aa');
+        console.log(aLi);
+
     </script>
 </body>
 
