--- a/4_DOM/6_dom事件.html
+++ b/4_DOM/6_dom事件.html
@@ -10,11 +10,28 @@
         body {
             height: 2000px;
         }
+        #div1{
+            width: 200px;
+            height: 200px;
+            background: #f00;
+        }
+        #div2{
+            width: 100px;
+            height: 100px;
+            background: #0f0;
+        }
     </style>
 </head>
 
 <body>
     <button id="btn1">点我</button>
+    <button id="btn2">事件操作</button>
+    <div id="div1">
+        <div id="div2"></div>
+    </div>
+    <a href="http://www.baidu.com" id="goBaidu">go baidu</a>
+
+
     <script>
         var oBtn1 = document.getElementById('btn1');
         // oBtn1.onclick = function(){
@@ -86,8 +103,40 @@
             }
         }
 
+         // 事件
+        // 1. 事件源
+        // 2. 事件
+        // 3. 事件处理函数
+
+        var oBtn2 = document.getElementById('btn2');
+        oBtn2.onclick = function(e){
+            console.log(e.clientX, e.clientY);
+        }
 
 
+        var oDiv1 = document.getElementById('div1');
+        var oDiv2 = document.getElementById('div2');
+        oDiv1.onclick = function(e){
+            // console.log(e.clientX, e.clientY);
+            console.log('div1...', e.target);
+            
+        }
+        oDiv2.onclick = function(e){
+            // console.log(e.clientX, e.clientY);
+            console.log('div2...', e.target);
+        }
+
+        var oGoBaidu = document.getElementById('goBaidu');
+        oGoBaidu.onclick = function(e){
+            console.log('haha');
+
+            e.preventDefault();  //标准浏览器
+            e.returnValue = false; //IE
+        }
+
+        document.onkeydown = function(e){
+            console.log(e.keyCode);
+        }
     </script>
 </body>
 
